# namecom_ddns

./: Cargo.toml  README.md
.github/workflows/: arm_releases.yml  coverage.yml  devskim.yml  integration-test.yml  releases.yml  rust-clippy.yml  rust.yml
ci/: gen_config.sh  validate_and_cleanup.sh
examples/: namecom_ddns.toml
src/: api.rs  config.rs  ip.rs  main.rs
src/getip/: gip.rs  hostip.rs  lib.rs  libc_getips.rs
