[package]
name = "namecom_ddns"
description = "Name.com DNS Updater"
authors = ["Zhang Maiyun <myzhang1029@hotmail.com>", "dalance <dalance@gmail.com>"]
license = "AGPL-3.0-or-later"
version = "0.2.0"
readme = "README.md"
edition = "2018"

[dependencies]
async-trait = "0.1"
derive_deref = "1"
futures = "0.3"
libc = "0.2"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.10"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
thiserror = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.5"
trust-dns-resolver = "0.20"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["heapapi", "iphlpapi", "iptypes"] }

[lib]
name = "getip"
path = "src/getip/lib.rs"

[[bin]]
name = "namecom_ddns"
path = "src/main.rs"
