[package]
name = "namecom_ddns"
version = "0.4.0"
authors = ["Zhang Maiyun <myzhang1029@hotmail.com>", "dalance <dalance@gmail.com>"]
edition = "2018"
description = "Query IP addresses and update DNS records with Name.com API"
readme = "README.md"
repository = "https://github.com/myzhang1029/namecom_ddns"
license = "AGPL-3.0-or-later"
keywords = ["ddns", "dns", "ip"]
categories = ["command-line-utilities", "api-bindings"]
exclude = ["/ci", ".*"]

[dependencies]
async-trait = "0.1"
clap = "2"
derive_deref = "1"
futures = "0.3"
libc = "0.2"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.10"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
thiserror = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.5"
trust-dns-resolver = "0.20"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["heapapi", "iphlpapi", "iptypes"] }

[lib]
name = "getip"
path = "src/getip/lib.rs"

[[bin]]
name = "namecom_ddns"
path = "src/main.rs"
