[package]
name = "namecom_ddns"
version = "0.6.1"
authors = ["Zhang Maiyun <me@maiyun.me>", "dalance <dalance@gmail.com>"]
edition = "2021"
description = "Query IP addresses and update DNS records with Name.com API"
readme = "README.md"
repository = "https://github.com/myzhang1029/namecom_ddns"
license = "AGPL-3.0-or-later"
keywords = ["ddns", "dns", "ip"]
categories = ["command-line-utilities", "api-bindings"]
exclude = ["/ci", ".*"]

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["cargo", "derive"] }
derive_deref = "1"
futures = "0.3"
libc = "0.2"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
thiserror = "2"
tokio = { version = "^1, >=1.23.1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
hickory-resolver = "0.24"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["heapapi", "iphlpapi", "iptypes"] }

[lib]
name = "getip"
path = "src/getip/lib.rs"

[[bin]]
name = "namecom_ddns"
path = "src/main.rs"
